@@ -45,7 +45,7 @@ If there are multiple curves, there is one line of output for each.
 The mean and its variance are based on a truncated estimator.  That is, if the 
 last observation(s) is not a death, then the survival curve estimate does not 
 go to zero and the mean is undefined.
-There are four possible approaches, which are selected by the
+There are four possible approaches to resolve this, which are selected by the
 \code{rmean} option.
 The first is to set the upper limit to a constant, e.g.,\code{rmean=365}.
 In this case the reported mean would be the expected number of days, out
@@ -53,16 +53,19 @@ of the first 365, that would be experienced by each group.  This is
 useful if interest focuses on a fixed period.
 Other options are \code{"none"} (no estimate), \code{"common"} and
 \code{"individual"}.
-For the last of these, the mean is computed as the area under the curve,
-over the
-range from 0 to the maximum observed time for that curve.
+The \code{"common"} option uses the maximum time for all curves in the
+object as a common upper limit for the auc calculation.
+For the \code{"individual"}options the mean is computed as the area
+under each curve,
+over the range from 0 to the maximum observed time for that curve.
 Since the end point is random, values for different curves are not
 comparable and the printed standard errors are an underestimate as
 they do not take into account this random variation.  This option is
 provided mainly for backwards compatability, as this estimate was the
 default (only) one in earlier releases of the code.
-The \code{"common"} option uses the maximum time for all curves in the
-object as a common upper limit for the auc calculation.
+Note that SAS (as of version 9.3) uses the integral up to the last
+\emph{event} time of each individual curve; we consider this the worst
+of the choices and do not provide an option for that calculation.
 
 The median and its confidence interval are defined by drawing a horizontal 
 line at 0.5 on the plot of the survival curve and its confidence bands. 
